# Breaking-Data-Reto-3

./: .gitignore  README.md
entrenamiento_reto3/: entrenar.py  pyproject.toml
inferencia/: arena.py
inferencia_reto3/: interfaz.py  pyproject.toml  torneo.py
inferencia_reto3/agentes/: agente_aleatorio.py  agente_onnx.py  ia_street_fighter.onnx  plantilla.py
