[project]
name = "entrenamiento-reto3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "opencv-python-headless>=4.13.0.92",
    "stable-baselines3[extra]>=2.8.0",
    "stable-retro>=1.0.0",
    "torch>=2.11.0",
]
